[package]
name = "exitcode"
version = "1.1.2"
authors = ["Ben Wilber <benwilber@gmail.com>"]
description = "Preferred system exit codes as defined by sysexits.h"
documentation = "https://docs.rs/exitcode"
homepage = "https://github.com/benwilber/exitcode"
repository = "https://github.com/benwilber/exitcode"
readme = "README.md"
keywords = ["sysexits", "exitcode"]
categories = ["os", "command-line-interface"]
license = "Apache-2.0"

[dependencies]
